# web3-login

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  config.yml  config_release.yml  do_not_use_rsa.pem  docker-compose.yml
.cloudflared/: config.yml
.github/workflows/: coverage.yml  docker.yml
src/: account_endpoints.rs  authorize.rs  bearer.rs  claims.rs  cli.rs  config.rs  jwk.rs  lib.rs  main.rs  nft_endpoints.rs  nft_owner.rs  signature_validator.rs  signing_key_store.rs  tests.rs  token.rs  userinfo.rs  web3.rs  well_known.rs
src/authorize/: authorize_error.rs  authorize_impl.rs  mod.rs  nft_authorize.rs  web3_authorize.rs
src/endpoints/: account_endpoints.rs  mod.rs  nft_endpoints.rs
src/server/: mod.rs  tests.rs
src/server/routes/: mod.rs  token.rs
src/traits/: mod.rs
static/: index.html  index.js
