[package]
authors = ["Christian <chriamue@gmail.com>"]
description = "oidc provider using web3 technologies"
edition = "2021"
license = "MIT"
name = "web3-login"
readme = "README.md"
repository = "https://github.com/web3-login/web3-login"
version = "0.2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["account", "bin"]
account = ["web3"]
nft = ["account"]
bin = ["rocket", "rocket-include-static-resources", "tokio"]
wasm = ["web3/wasm"]

[dependencies]
async-trait = "0.1.72"
axum = "0.7"
axum-auth = { version = "0.7", default-features = false, features = [
    "auth-bearer",
] }
chrono = "0.4"
futures = "0.3"
hex = "0.4"
openidconnect = { version = "3.3" }
rocket = { version = "0.5.0-rc.3", features = ["json"], optional = true }
rocket-include-static-resources = { version = "0.10", features = [
    "cache",
], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"], optional = true }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
url = "2.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
web3 = { version = "0.19", default-features = false, features = [
    "signing",
    "http-rustls-tls",
], optional = true }

[dev-dependencies]
axum-test = "14.0.0"
hyper = "1.1.0"
tempfile = "3.8.1"
tokio = { version = "1.0", features = ["full", "test-util"] }
