[package]
authors = ["Christian <chriamue@gmail.com>"]
description = "oidc provider using web3 technologies"
edition = "2021"
license = "MIT"
name = "web3-login"
readme = "README.md"
repository = "https://github.com/web3-login/web3-login"
version = "0.2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["account", "bin"]
account = ["web3"]
nft = ["account"]
bin = ["rocket", "rocket-include-static-resources", "tokio"]
wasm = ["web3/wasm"]

[dependencies]
async-trait = "0.1.77"
axum = "0.7"
axum-auth = { version = "0.7", default-features = false, features = [
    "auth-bearer",
] }
axum-extra = "0.9.2"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
hex = "0.4"
openidconnect = { version = "3.4" }
pretty_env_logger = "0.4"
rocket = { version = "0.5.0", features = ["json"], optional = true }
rocket-include-static-resources = { version = "0.10", features = [
    "cache",
], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"], optional = true }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
url = "2.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
web3 = { version = "0.19", default-features = false, features = [
    "signing",
    "http-rustls-tls",
], optional = true }

[dev-dependencies]
axum-test = "14.2.2"
http-body-util = "0.1.0"
hyper = "1.1.0"
tempfile = "3.9.0"
tokio = { version = "1.35", features = ["full", "test-util"] }
